# axum-markdown-preview

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: lib.rs  main.rs
src/args/: mod.rs  parser.rs
src/router/: handlers.rs  mod.rs
